--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Implicit Intents"
+            android:text="Implicit Intents Testing"
             android:layout_margin="25dp"
             android:textColor="@color/offwhite"
             android:textSize="25dp"
